<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.lbenoit.conference</groupId>
	<artifactId>jdk16-nouveautes-exos</artifactId>
	<version>0.1.0</version>
	<packaging>pom</packaging>

	<properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	    <license.outputDirectory>${basedir}</license.outputDirectory>
	</properties>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<modules>
		<module>jdk16-exos-debut</module>
		<module>jdk16-exos-solution</module>
	</modules>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>16</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.16</version>
				<configuration>
					<includes>
						<include>**/*.java</include>
						<include>**/*.properties</include>
						<include>**/*.jsp*</include>
						<include>**/*.css</include>
						<include>**/*.html</include>
						<include>**/*.js</include>
					</includes>
					<inceptionYear>2021</inceptionYear>
					<organizationName>Lilian BENOIT</organizationName>
					<licenseName>apache_v2</licenseName>
					<projectName>jdk16-nouveautes-exos</projectName>
				</configuration>

				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-core</artifactId>
						<version>1.6</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-site-renderer</artifactId>
						<version>1.6</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>